# teacher-feedback-sentiment-analysis

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/sample/: teacher_feedback_sample.csv
docs/: current_status.md  project_context.md
notebooks/: README.md
reports/: README.md
reports/metrics/: baseline_metrics.json  model_selection_metrics.json
scripts/: run_baseline.py  run_experiment.py
src/teacher_feedback_sentiment_analysis/: __init__.py  baseline.py  data_loading.py  evaluation.py  modeling.py  pipeline.py  preprocessing.py  types.py
tests/: test_core_pipeline.py
