[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teacher-feedback-sentiment-analysis"
version = "0.1.0"
description = "NLP project for teacher feedback sentiment analysis."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
